--- a/gb/18/11/9/n10841279.md
+++ b/gb/18/11/9/n10841279.md
@@ -1,67 +1,66 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kcypup330/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kcypup330/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kcypup330/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kcypup330/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kcypup330/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kcypup330/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kcypup330/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kcypup330/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kcypup330/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kcypup330/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kcypup330/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kcypup330/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kcypup330/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kcypup330/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kcypup330/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kcypup330/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/kcypup330/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kcypup330/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/kcypup330/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kcypup330/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kcypup330/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kcypup330/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kcypup330/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kcypup330/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>花莲县志愿服务协会启动部落义剪维修关怀独居老人</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/11/352659-600x400.jpg" />
 <h6>“平安幸福”志愿服务深耕社区计划前进偏远的观音部落服务。（花莲县志愿服务协会提供）
 </h6>
 <hr>
-<p>【大纪元2018年11月09日讯】（大纪元记者陈玫均台湾花莲报导）<ahref="https://github.com/kcypup330/djy/blob/master/gb/tag/%E8%8A%B1%E8%8E%B2%E5%8E%BF%E6%94%BF%E5%BA%9C.md#1">花莲县政府</a>指导、花莲县<ahref="https://github.com/kcypup330/djy/blob/master/gb/tag/%E5%BF%97%E6%84%BF%E6%9C%8D%E5%8A%A1%E5%8D%8F%E4%BC%9A.md#1">志愿服务协会</a>承办的今年度“平安幸福”志愿服务深耕社区计划，11月的第一周在偏远的玉里镇观音部落启动，志工团队在玉里警分局观音派出所的协助下，热心的帮忙老人修家电、修单车、义剪、<ahref="https://github.com/kcypup330/djy/blob/master/gb/tag/%E5%85%B3%E6%80%80%E7%8B%AC%E5%B1%85%E8%80%81%E4%BA%BA.md#1">关怀独居老人</a>、整理图书、打扫环境等等，“服务到家、一次搞定”的关怀活动，对弱势家庭很实用。</p>
-<p>协会理事长黄爱伶表示，观音部落位于玉里镇 193 线海岸山脉山边，有居民一百多户，由于没有工作机会，青壮年都跑到都会区谋生，部落只剩老弱贫病；此外该部落没有水电工、理发厅，老弱有这些方面的需要，非得翻山越岭到玉里镇闹区采买不可，也因此<ahref="https://github.com/kcypup330/djy/blob/master/gb/tag/%E5%BF%97%E6%84%BF%E6%9C%8D%E5%8A%A1%E5%8D%8F%E4%BC%9A.md#1">志愿服务协会</a>特地选择该部落进行关怀活动。</p>
+<p>【大纪元2018年11月09日讯】（大纪元记者陈玫均台湾花莲报导）<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8A%B1%E8%8E%B2%E5%8E%BF%E6%94%BF%E5%BA%9C.md#1">花莲县政府</a>指导、花莲县<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BF%97%E6%84%BF%E6%9C%8D%E5%8A%A1%E5%8D%8F%E4%BC%9A.md#1">志愿服务协会</a>承办的今年度“平安幸福”志愿服务深耕社区计划，11月的第一周在偏远的玉里镇观音部落启动，志工团队在玉里警分局观音派出所的协助下，热心的帮忙老人修家电、修单车、义剪、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B3%E6%80%80%E7%8B%AC%E5%B1%85%E8%80%81%E4%BA%BA.md#1">关怀独居老人</a>、整理图书、打扫环境等等，“服务到家、一次搞定”的关怀活动，对弱势家庭很实用。</p>
+<p>协会理事长黄爱伶表示，观音部落位于玉里镇 193 线海岸山脉山边，有居民一百多户，由于没有工作机会，青壮年都跑到都会区谋生，部落只剩老弱贫病；此外该部落没有水电工、理发厅，老弱有这些方面的需要，非得翻山越岭到玉里镇闹区采买不可，也因此<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BF%97%E6%84%BF%E6%9C%8D%E5%8A%A1%E5%8D%8F%E4%BC%9A.md#1">志愿服务协会</a>特地选择该部落进行关怀活动。</p>
 <p>观音派出所事先统计家户需要维修的地方，然后交由志愿服务协会购买需要的零件、材料；接着大批志工来到该部落，分组展开各项维修、义剪行动。</p>
 <p>志工们修电灯修电灯、修水龙头的修水龙头、义剪的义剪，老人们充满笑容热泪满盈，一直感谢志工们的帮忙，让他们能够不再摸黑找东西，减少危险的发生，从此也能在家中做简单的生活起居。</p>
 <p>修单车最受儿童们的欢迎，该部落没有单车维修店家，如果单车毁损，都必须送到车程要三十分钟的玉里镇闹区维修；修单车一直修到傍晚才修完，显示出偏远部落很有这项需求。</p>
-<figure id="attachment_10849230" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/11/352660.jpg"><img class="wp-image-10849230" src="https://i.epochtimes.com/assets/uploads/2018/11/352660-600x450.jpg" alt="" width="500" b="375" /></a><figcaption class="wp-caption-text">修单车。（花莲县志愿服务协会提供）</figcaption></figure>
+<figure id="attachment_10849230" aria-describedby="caption-attachment-10849230" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/11/352660.jpg"><img class="wp-image-10849230" src="https://i.epochtimes.com/assets/uploads/2018/11/352660-600x450.jpg" alt="" width="500" b="375" /></a><figcaption id="caption-attachment-10849230" class="wp-caption-text">修单车。（花莲县志愿服务协会提供）</figcaption></figure>
 <p>志工们同时慰问弱势家庭妇人，她们很感动的说，部落地处偏远，过去很少有公益社团能够如此深入到观音部落服务，志愿服务协会、观音派出所能够如此关怀她们，实在令人很感动！</p>
-<p>花莲县志愿服务协会理事长黄爱伶，支持县政府极重视老人社会福利政策下举办“平安幸福”<ahref="https://github.com/kcypup330/djy/blob/master/gb/tag/%E5%85%B3%E6%80%80%E7%8B%AC%E5%B1%85%E8%80%81%E4%BA%BA.md#1">关怀独居老人</a>活动，每个月第一个周日上午十一点至下午四点，将继续在偏远部落举办系列关怀活动，邀请各位志同道合的朋友一同来共襄盛举，大家有力出力，来为花莲的独居老人们尽一份心力。</p>
+<p>花莲县志愿服务协会理事长黄爱伶，支持县政府极重视老人社会福利政策下举办“平安幸福”<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B3%E6%80%80%E7%8B%AC%E5%B1%85%E8%80%81%E4%BA%BA.md#1">关怀独居老人</a>活动，每个月第一个周日上午十一点至下午四点，将继续在偏远部落举办系列关怀活动，邀请各位志同道合的朋友一同来共襄盛举，大家有力出力，来为花莲的独居老人们尽一份心力。</p>
 <p>责任编辑：郑桦</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/kcypup330/djy/blob/master/gb/18/1/28/n10094366.md#1">关怀独居老人年节加菜  竹市近90单位共襄盛举</a></li>
-<li><a href="https://github.com/kcypup330/djy/blob/master/gb/18/2/2/n10109993.md#1">伪装水电工入室抢劫 桥港区独居老人中招</a></li>
-<li><a href="https://github.com/kcypup330/djy/blob/master/gb/18/2/13/n10139870.md#1">关怀弱势边缘户家庭与独居老人年菜发送</a></li>
-<li><a href="https://github.com/kcypup330/djy/blob/master/gb/18/6/15/n10487077.md#1">宜兰邮局端午节送粽 关怀独居老人</a></li>
-<li><a href="https://github.com/kcypup330/djy/blob/master/gb/20/10/30/n12512896.md#1">壮志未酬 昔飞虎乐团吉他手遗爱人间</a></li>
-<li><a href="https://github.com/kcypup330/djy/blob/master/gb/20/10/29/n12510246.md#1">自强路道路新辟拓宽工程 动工</a></li>
-<li><a href="https://github.com/kcypup330/djy/blob/master/gb/20/10/29/n12510198.md#1">宜兰成立正子中心 缩短东部医疗里程</a></li>
-<li><a href="https://github.com/kcypup330/djy/blob/master/gb/20/10/28/n12508744.md#1">环团台东议会陈情：拆除美丽湾公开仲裁书</a></li>
-<li><a href="https://github.com/kcypup330/djy/blob/master/gb/20/10/28/n12508022.md#1">林右昌：打开大台北产业流向市港的水龙头</a></li>
-<li><a href="https://github.com/kcypup330/djy/blob/master/gb/20/10/28/n12507939.md#1">公车暴冲酿14伤 林右昌：专案调查厘清原因</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/1/28/n10094366.md#1">关怀独居老人年节加菜  竹市近90单位共襄盛举</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/2/2/n10109993.md#1">伪装水电工入室抢劫 桥港区独居老人中招</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/2/13/n10139870.md#1">关怀弱势边缘户家庭与独居老人年菜发送</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/15/n10487077.md#1">宜兰邮局端午节送粽 关怀独居老人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615950.md#1">探访宜兰市中山公园内百年古迹~献馘碑</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615945.md#1">宜兰县班班有冷气全面测试完成</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615863.md#1">基隆快捷公车便民再+1 关键交通部相关措施解套</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613153.md#1">打火英雄荣获凤凰奖  林右昌感谢警义消奉献</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610962.md#1">228纪念仪式  蔡英文：转型正义迈向新里程</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610838.md#1">宜兰追思二二八 主题“向前” 盼带来正能量</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/26/n2976689.md#1" target="_blank">鲜为人知的马克思之六：信神的马克思</a></li><li><a href="https://github.com/kcypup330/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/27/n9325401.md#1" target="_blank">林展翔：迫害法轮功责任人入美将面临制裁</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/26/n10248973.md#1" target="_blank">还原真实的中共：年轻人乌托邦梦碎</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/1/n11424700.md#1" target="_blank">罗兰：中共公安何以成公害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/22/n12494562.md#1">张爱玲的家世 晚清历史里的先人</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/9/30/n12442831.md#1">《圣经》与《推背图》预言的应验与变换3</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/9/30/n12442832.md#1">《圣经》与《推背图》预言的应验与变换4</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/8/10/n12318958.md#1">【命理】怎样才能知道自己是做生意的命？</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/30/n12512395.md#1">【拍案惊奇】大选日极左骚乱？中共邻国纷投美</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/29/n12511883.md#1">【远见快评】川普胜选3大理由 蓬佩奥突访越南</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/29/n12511266.md#1">【重播】川普与夫人佛州演讲：投票给美国未来</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/28/n12509051.md#1">CEO提供不实证词后 推特解封《纽邮》账户</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/28/n12508576.md#1">【一线采访】上海浦东现疫情 管控全面升级</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/28/n12507118.md#1">【重播】FBI：逮捕5人 中共猎狐行动令人发指</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/27/n12506230.md#1">汤唯开工第一天 公婆带全家人送应援车</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/28/n12509127.md#1">过世父亲留下百亿家产 黄子韬频晒奢侈品惹议</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/27/n12506472.md#1">朱茵开工过49岁生日 获黄贯中隔空送歌贺寿</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/29/n12511870.md#1">翻拍《棋灵王》被批毁童年 中共大内宣引众怒</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/29/n12509634.md#1">《后翼弃兵》影评：天才女棋手的精彩传奇</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/29/n12509968.md#1">主人忘记带走 小狗花26天走60多公里回家</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/27/n12506567.md#1">10个天然方法 补充体内快乐物质 忧郁焦虑一扫光</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/26/n12501857.md#1">高血脂有3症状！这些食物清胆固醇 让血液变干净</a></li>
-<li><a href="https://github.com/yfvdmz376/djy/blob/master/gb/20/10/27/n12505985.md#1">新研究：防新冠病毒 口罩和社交距离还不够</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kcypup330/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kcypup330/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/11/9/n10841279.htm">花莲县志愿服务协会启动部落义剪维修关怀独居老人</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/11/9/n10841279.htm">花莲县志愿服务协会启动部落义剪维修关怀独居老人</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kcypup330/djy/blob/master/gb/18/11/9/n10841279.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kcypup330/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kcypup330/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kcypup330/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kcypup330/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kcypup330/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/11/9/n10841279.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
